re-arranging of index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Task Description: Creates the home page of the AsthmAlarm Doctor Dashboard where
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="HTML/home.css">
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
@@ -69,7 +69,7 @@ Task Description: Creates the home page of the AsthmAlarm Doctor Dashboard where
                     </a>
                 </li>
                 <li id = 'patient-info'>
-                    <a href="patient-info.html">
+                    <a href="HTML/patient-info.html">
                         Patient Info
                     </a>
                 </li>
@@ -284,11 +284,11 @@ Task Description: Creates the home page of the AsthmAlarm Doctor Dashboard where
                 <div class="row">
                     <div class="text-center col-6">
                         <h5>AsthmAlarm for Windows Application</h5>
-                        <a href="../../../AsthmAlarm_App/AsthmAlarm for Windows - EXE/AsthmAlarm_for_Windows.zip" class = "btn btn-primary">Download App</a>
+                        <a href="#" class = "btn btn-primary">Download App</a>
                     </div>
                     <div class="text-center col-6">
                         <h5>AsthmAlarm for Windows User Guide</h5>
-                        <a href="../../AsthmAlarm Instruction Manual.pdf" class = "btn btn-primary">Download Manual</a>
+                        <a href="#" class = "btn btn-primary">Download Manual</a>
                     </div>
                 </div>
             </div>
@@ -387,9 +387,9 @@ Task Description: Creates the home page of the AsthmAlarm Doctor Dashboard where
         };
         firebase.initializeApp(firebaseConfig);
     </script>
-    <script src="../JS/index.js"></script>
+    <script src="JS/index.js"></script>
     <!-- <script src="../JS/Materialize.js"></script> -->
-    <script src="../JS/status-bar.js"></script>
+    <script src="JS/status-bar.js"></script>
     <!-- <script src="../JS/status-bar.js"></script> -->
 </body>
 
